# HighQualityMeshGeneration

./: Reiner Text.docx  Structure.txt
Source Code/Bachelor/HQMG/: Atom.cpp  Atom.h  CMakeLists.txt  Front.cpp  Front.h  GuidanceField.cpp  GuidanceField.h  HighQualityMeshGeneration2D.cpp  MeshExtractor.cpp  MeshExtractor.h  MultivariatePolynom.cpp  MultivariatePolynom.h  Octree.cpp  Octree.h  Particle.cpp  Particle.h  ShardFileParser.cpp  ShardFileParser.h  SimpleParticle.cpp  SimpleParticle.h  Spline.cpp  Spline.h  Surface.cpp  Surface.h  Vertex.cpp  Vertex.h
Source Code/Bachelor/Shader/: HQMGDefault.nfx
Source Code/Bachelor/Shader/PS/: HQMG.hlsl
Volumes/: cube.nsf  cube2.nsf  disk.nsf  smallSphere.nvf  sphere.nsf
